src/contentScript/timeline/components/TimelineButton/TimelineButton.css
.timeline-box-outer {
	--hover-move-distance: -7px;
	--hover-move-distance-positive: calc(var(--hover-move-distance) * -1);
	display: flex;
	flex-direction: column;
	grid-column: 1;
	grid-row: 1;
	transition: opacity var(--pfy-timing-fast);

	&[data-hover-highlight="inactive"] {
		opacity: 0;
	}

	.box-interaction-area {
		position: absolute;
		transform: translateX(-50%);
		transition: padding var(--pfy-timing-fast), transform var(--pfy-timing-fast);

		.timeline-box-inner {
			display: flex;
			flex-direction: column;
			padding-left: var(--pfy-spacing-standard);
			padding-right: var(--pfy-spacing-standard);
			background: var(--pfy-empty-01-raised);
			border: 1px solid var(--pfy-primary-dark);
			border-radius: var(--pfy-spacing-standard);
			flex-grow: 1;
			cursor: pointer;
			transition: width var(--pfy-timing-fast);
			
			&[data-circle="true"] {
				width: 22px;
				height: 22px;
				padding: 0;
				border-radius: 100px;
			}

			.autoplay-icon {
				width: 12px;
				height: 12px;
				margin: auto;
			}

			&[data-active-toggle="true"] {
				background-color: var(--pfy-primary-dark);
			}
		}

		&[data-hover="true"] {
			padding-bottom: var(--hover-move-distance-positive);
			transform: translate(-50%, var(--hover-move-distance));
		}
	}

	.arrow-icon-container {
		--arrow-offset-align-distance: 0px;
		cursor: pointer;
		position: absolute;
		transform: translateX(-50%);
		transition: transform var(--pfy-timing-fast);

		& svg {
			transform: translateY(var(--arrow-offset-align-distance));
		}

		&[data-hover="true"] {
			transform: translate(-50%, calc(var(--hover-move-distance)));
		}
	}
	
	.arrow-fill {
		fill: var(--pfy-empty-01-raised)
	}
	
	.arrow-border {
		stroke: var(--pfy-primary-dark);
	}
	
	.timeline-inner-text {
		text-align: center;
		text-wrap: nowrap;
		font-size: var(--pfy-font-text-standard);
		color: var(--pfy-text-normal);
		overflow: hidden;
		margin: auto 0;
		margin-top: 1px;
	}
}

